# CrappySolver

./: .gitignore  .gitmodules  CMakeLists.txt  NodeList.h  README.md  Untitled-1.ipynb  analysis.ipynb  full.json  happy.cpp  process.json  test.cpp  test.lp
example/: CrudeModel.cpp  CrudeModel.h  Ex844.cpp  Ex844.h  ProcessModel.cpp  ProcessModel.h  STModel.cpp  STModel.h  happy.cpp
src/: Algo.cpp  Algo.h  Algo.tpp  BBHeuristic.cpp  BBHeuristic.h  BBNode.cpp  BBNode.h  CrappySolver.cpp  CrappySolver.h
